--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+* Objetivo del global campus, metaenlaces entre todos ellos, de forma que todo tiene la misma apariencia, etc.
+  Es como una wiki global conectada de aprendizaje.
+
 * Libro STXT, rehacer de forma más senzilla, con global campus
 * Editor stxt
 	* Pantalla principal + Texto
